@@ -50,13 +50,11 @@ public class SecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    // Allow your specific domain
-    configuration.setAllowedOrigins(List.of("https://live-dnd-list.duckdns.org"));
+    configuration.setAllowedOrigins(Arrays.asList("https://live-dnd-list.duckdns.org"));
     configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
     configuration.setAllowedHeaders(
         Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
     configuration.setAllowCredentials(true);
-
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
     return source;
@@ -77,7 +75,7 @@ public class SecurityConfig {
             .requestMatchers(
                 // --- Authentication ---
                 "/api/v1/auth/**",
-                "/api/v1/sync",
+                "/api/v1/sync/**",
 
                 // --- All Swagger/OpenAPI related paths ---
                 "/swagger-ui.html",
